added methods for prediction api

--- a/client/views/main_views/admin/list.html
+++ b/client/views/main_views/admin/list.html
@@ -21,6 +21,9 @@
             <li class="">
               <a href="#revel-link" data-toggle="tab">POS/ Menu Linking</a>
             </li>
+            <li class="">
+              <a href="#prediction-training" data-toggle="tab">Prediction</a>
+            </li>
           </ul>
           <div class="tab-content">
             <div class="tab-pane active" id="usersList">
@@ -37,6 +40,9 @@
             </div>
             <div class="tab-pane" id="revel-link">
               {{> render component='revelMenuLink'}}
+            </div>
+            <div class="tab-pane" id="prediction-training">
+              {{> render component='predictionTraining'}}
             </div>
           </div>
         </div>
