--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -7,8 +7,8 @@
       <ul class="nav navbar-top-links navbar-right">
         {{#if isInOrganization}}
           <li>
-            <span class="open-flyout welcome-message" data-id="organizationStructure">
-              {{currentArea.name}}
+            <span class="open-flyout" data-id="organizationStructure">
+              {{getCurrentArea.name}}
             </span>
           </li>
           <li>
