--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -9,15 +9,7 @@
     <div class="form-group">
       <label class="col-sm-2 control-label">Area Location</label>
       <div class="col-sm-10">
-        <select name="locationId" class="form-control">
-          {{#each state$locations}}
-            {{#if state$activeLocation _id}}
-              <option value="{{_id}}" selected="selected">{{name}}</option>
-            {{else}}
-              <option value="{{_id}}">{{name}}</option>
-            {{/if}}
-          {{/each}}
-        </select>
+        {{> render component='selectComponent' name='locationId' values=state$locations selected=state$activeLocation}}
       </div>
     </div>
     <div class="form-group">
