Changes to area settings page

--- a/client/lib/components/organizations/organization_structure/view.html
+++ b/client/lib/components/organizations/organization_structure/view.html
@@ -41,7 +41,7 @@
             <div class="ibox float-e-margins" style="margin-bottom: 0;">
               <div class="ibox-content" style="padding-bottom: 10px;">
                 <div class="feed-activity-list">
-                  {{> render component="invitationsList"}}
+                  {{> render component="invitationsList" organizationId=state$organization._id}}
                 </div>
               </div>
             </div>
