--- a/client/lib/components/organizations/areas/area_settings/view.html
+++ b/client/lib/components/organizations/areas/area_settings/view.html
@@ -1,14 +1,14 @@
 <template name="areaSettings">
-  {{#if state$isOrganizationOwner}}
+  {{#if isOrganizationOwner}}
     <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}" data-display="false">{{state$area.name}}</h1>
   {{else}}
-    <h1 style="display: inline-block;" data-id="{{state$area._id}}">{{state$area.name}}</h1>
+    <h1 style="display: inline-block;">{{state$area.name}}</h1>
   {{/if}}
 
   <div class="area-users">
     {{#each state$areaUsers}}
       <div class="user-profile-image-container">
-        {{#if state$isOrganizationOwner}}
+        {{#if isOrganizationOwner}}
           {{#unless isMe _id}}
             <i class="fa fa-times remove-user-from-area"></i>
           {{/unless}}
@@ -20,7 +20,7 @@
     {{/each}}
   </div>
 
-  {{#if state$isOrganizationOwner}}
+  {{#if isOrganizationOwner}}
     <button class="btn btn-white col-xs-12 add-user" data-id="{{state$area._id}}">
       <i class="fa fa-user-plus"></i>  Add User
     </button>
