Improved forecast view

--- a/client/lib/components/sales_prediction/view.html
+++ b/client/lib/components/sales_prediction/view.html
@@ -38,7 +38,7 @@
           </tr>
           {{#each state$menuItems}}
             <tr>
-              <td>{{this}}</td>
+              <td>{{this.name}}</td>
               {{#each state$week}}
                 <td>{{state$random 2}}</td>
                 <td>{{state$random 2}}</td>
