--- a/client/lib/components/dashboard/post/view.html
+++ b/client/lib/components/dashboard/post/view.html
@@ -1,40 +1,40 @@
 <template name="onePost">
-{{#if state$checkifnotcomment }}
+  {{#if state$checkifnotcomment }}
     <div class="social-feed-box">
-        <div class="social-avatar">
+      <div class="social-avatar">
+        <a class="pull-left" href="#">
+          <img src="{{state$profilePicture}}" alt="image">
+        </a>
+
+        <div class="media-body" data-id="{{state$id}}" id="{{state$id}}">
+          <a href="#">{{state$name}}</a>
+          <a href="#" class="small thumbsup-like pull-left like-post"><i class="fa fa-thumbs-up"></i> {{state$like}}
+            Like this!</a>
+          <small class="text-muted pull-left">&nbsp; - &nbsp;{{timeFormattedWithDate state$createdOn}}</small>
+        </div>
+      </div>
+      <div class="social-body">
+        {{{state$text}}}
+      </div>
+
+
+      <div class="social-footer">
+        {{#each state$commentsof}}
+          {{> render component='onecommentofPost' commentp=this}}
+        {{/each}}
+        <div class="social-comment">
+          <div class="form-group">
             <a class="pull-left" href="#">
-                <img src="{{state$profilePicture}}" alt="image">
+              <img src="{{state$currentprofilePicture}}" alt="image">
             </a>
-            <div class="media-body" data-id="{{state$id}}" id="{{state$id}}">
-                <a href="#">{{state$name}}</a>
-                <a href="#" class="small thumbsup-like pull-left like-post"><i class="fa fa-thumbs-up"></i> {{state$like}} Like this!</a><small class="text-muted pull-left">&nbsp;  - &nbsp;{{timeFormattedWithDate state$createdOn}}</small>
-            </div>
-        </div>
-        <div class="social-body">
-            {{{state$text}}}
-            <!--<div class="btn-group">-->
-                <!--<button class="btn btn-white btn-xs comment-post pull-right"><i class="fa fa-comments"></i> Comment</button>-->
-                <!--&lt;!&ndash;<button class="btn btn-white btn-xs like-post pull-right"><i class="fa fa-thumbs-up"></i> Like this!</button>&ndash;&gt;-->
-            <!--</div>-->
-        </div>
 
-
-        <div class="social-footer">
-            {{#each state$commentsof}}
-                {{> render component='onecommentofPost' commentp=this}}
-            {{/each}}
-            <div class="social-comment">
-                <div class="form-group">
-                    <a class="pull-left" href="#">
-                        <img src="{{state$currentprofilePicture}}" alt="image">
-                    </a>
-                    <div class="media-body" data-id="{{state$id}}">
-                        {{#textareaAutocomplete settings=settings id="msg" name="message" class="form-control message-input-comment" placeholder="Write comment..."}}
-                        {{/textareaAutocomplete}}
-                    </div>
-                </div>
+            <div class="media-body" data-id="{{state$id}}">
+              {{#textareaAutocomplete settings=settings id="msg" name="message" class="form-control message-input-comment" placeholder="Write comment..."}}
+              {{/textareaAutocomplete}}
             </div>
+          </div>
         </div>
+      </div>
     </div>
-{{/if}}
+  {{/if}}
 </template>
