--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -67,29 +67,31 @@
   </div>
   <!-- Flyout profileFlyoutLinks -->
 
-  <!-- Flyout createOrganizationPage -->
-  <div class="theme-config flyout-container{{#if showCreateOrgFlyout}} show{{/if}}" id="createOrganizationPage">
-    <div class="theme-config-box">
-      <div class="skin-setttings">
-        <div class="white-notify-bg">
-          <div class="title clearfix">
-            <a href="#" class="theme-config-close-btn" data-id="createOrganizationPage">
-              <i class="fa fa-angle-right"></i>
-            </a>
-            Create Organization
-          </div>
-          <div class="ibox float-e-margins" style="margin-bottom: 0;">
-            <div class="ibox-content" style="padding-bottom: 10px;">
-              <div class="feed-activity-list">
-                {{>render component='createOrganizationPage'}}
+  {{#unless isInOrganization}}
+    <!-- Flyout createOrganizationPage -->
+    <div class="theme-config flyout-container{{#if showCreateOrgFlyout}} show{{/if}}" id="createOrganizationPage">
+      <div class="theme-config-box">
+        <div class="skin-setttings">
+          <div class="white-notify-bg">
+            <div class="title clearfix">
+              <a href="#" class="theme-config-close-btn" data-id="createOrganizationPage">
+                <i class="fa fa-angle-right"></i>
+              </a>
+              Create Organization
+            </div>
+            <div class="ibox float-e-margins" style="margin-bottom: 0;">
+              <div class="ibox-content" style="padding-bottom: 10px;">
+                <div class="feed-activity-list">
+                  {{>render component='createOrganizationPage'}}
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Flyout createOrganizationPage -->
+    <!-- Flyout createOrganizationPage -->
+  {{/unless}}
 
   {{#if isInOrganization}}
     <!-- Flyout organizationStructure -->
