--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -17,107 +17,118 @@
     </li>
 
     {{#if isInOrganization}}
-    <li class="{{isActiveRoute regex='weeklyRoster|dailyRoster|templateWeeklyRoster'}}">
-      <a href="#">
-        <i class="fa fa-calendar-o"></i>
-        <span class="nav-label">Roster</span>
-      </a>
-      <ul
-        class="nav nav-second-level {{isActiveRoute regex='dailyRoster|weeklyRoster|templateWeeklyRoster' className='in'}}">
-        <li class="{{isActiveRoute regex='weeklyRoster'}}">
-          <a href="/roster/weekly/{{year}}/{{week}}">Weekly</a>
-        </li>
-        <li class="{{isActiveRoute regex='dailyRoster'}}">
-          <a href="/roster/daily/{{today}}">Daily</a>
-        </li>
-        {{#if state$isManagerOrAdmin}}
-          <li class="{{isActiveRoute regex='templateWeeklyRoster'}}">
-            <a href="/roster/template/weekly">Template</a>
-          </li>
-        {{/if}}
-      </ul>
-    </li>
-
-    <li class="{{isActiveRoute regex='menuItemsMaster'}}">
-      <a href="/menuItems/{{state$category}}/{{state$status}}"><i class="fa fa-cutlery"></i> <span class="nav-label">Menu</span></a>
-    </li>
-
-    <li class="{{isActiveRoute regex='jobItemsMaster'}}">
-      <a href="/jobItems"><i class="fa fa-spoon"></i> <span class="nav-label">Jobs</span> </a>
-    </li>
-
-    <li class="{{isActiveRoute name='ingredientsList|stocktake|supplierOrdering'}}">
-      <a href="#">
-        <i class="fa fa-list"></i>
-        <span class="nav-label">Stock</span>
-      </a>
-      <ul
-        class="nav nav-second-level {{isActiveRoute name='ingredientsList|stocktake|supplierOrdering' className='in'}}">
-        <li class="{{isActiveRoute name='ingredientsList'}}">
-          <a href="/stocklist">List</a>
-        </li>
-        {{#if state$isManagerOrAdmin}}
-          <li class="{{isActiveRoute name='stocktake'}}">
-            <a href="/stocktake">Stocktake</a>
-          </li>
-          <li class="{{isActiveRoute name='supplierOrdering'}}">
-            <a href="/stocktake/order/receipts">Receive Orders</a>
-          </li>
-          <li class="{{isActiveRoute name='suppliersList'}}">
-            <a href="/suppliers">Suppliers</a>
-          </li>
-        {{/if}}
-      </ul>
-    </li>
-
-    {{#if state$isManagerOrAdmin}}
-      <li class="{{isActiveRoute regex='salesCalibration|actualSales|cafeSalesForecast|weeklySalesForecastMenusList'}}">
-        <a href="#">
-          <i class="glyphicon glyphicon-usd"></i>
-          <span class="nav-label">Sales</span>
-        </a>
-        <ul
-          class="nav nav-second-level {{isActiveRoute regex='salesCalibration|actualSales|cafeSalesForecast|weeklySalesForecastMenusList' className='in'}}">
-          <li class="{{isActiveRoute regex='salesCalibration'}}">
-            <a href="/sales/calibration/all/all">Calibration</a>
-          </li>
-          <li class="{{isActiveRoute regex='actualSales'}}">
-            <a href="/sales/{{today}}">Actual Sales</a>
-          </li>
-          <li class="{{isActiveRoute regex='cafeSalesForecast'}}">
+      {{#if getCurrentArea}}
+        {{#if canViewRoster}}
+          <li class="{{isActiveRoute regex='weeklyRoster|dailyRoster|templateWeeklyRoster'}}">
             <a href="#">
-              <span class="nav-label">Forecasting</span>
+              <i class="fa fa-calendar-o"></i>
+              <span class="nav-label">Roster</span>
             </a>
             <ul
-              class="nav nav-third-level {{isActiveRoute regex='cafeSalesForecast|weeklySalesForecastMenusList' className='in'}}">
-              <li class="{{isActiveRoute regex='cafeSalesForecast|weeklySalesForecastMenusList'}}">
-                <a href="/sales/forecast/cafe/{{year}}/{{week}}">Cafe</a>
+              class="nav nav-second-level {{isActiveRoute regex='dailyRoster|weeklyRoster|templateWeeklyRoster' className='in'}}">
+              <li class="{{isActiveRoute regex='weeklyRoster'}}">
+                <a href="/roster/weekly/{{year}}/{{week}}">Weekly</a>
               </li>
+              <li class="{{isActiveRoute regex='dailyRoster'}}">
+                <a href="/roster/daily/{{today}}">Daily</a>
+              </li>
+
+              {{#if canEditRoster}}
+                <li class="{{isActiveRoute regex='templateWeeklyRoster'}}">
+                  <a href="/roster/template/weekly">Template</a>
+                </li>
+              {{/if}}
             </ul>
           </li>
-        </ul>
-      </li>
+        {{/if}}
 
-      <li class="{{isActiveRoute name='teamHours|currentStocks'}}">
-        <a href="#">
-          <i class="fa fa-line-chart"></i>
-          <span class="nav-label">Reports</span>
-        </a>
-        <ul class="nav nav-second-level {{isActiveRoute name='teamHours|currentStocks' className='in'}}">
-          <li class="{{isActiveRoute name='teamHours'}}">
-            <a href="/reports/{{year}}/{{week}}#shifts">Team Hours</a>
-          </li>
-          <li class="{{isActiveRoute name='currentStocks'}}">
-            <a href="/reports/stocktake/currentStocks/{{year}}/{{week}}">Daily stock</a>
-          </li>
-        </ul>
-      </li>
-    {{/if}}
+      {{#if canViewMenu}}
+        <li class="{{isActiveRoute regex='menuItemsMaster'}}">
+          <a href="/menuItems/{{state$category}}/{{state$status}}"><i class="fa fa-cutlery"></i> <span class="nav-label">Menu</span></a>
+        </li>
+      {{/if}}
 
-    {{#if state$isManagerOrAdmin}}
-      <li class="{{isActiveRoute regex='admin'}}">
-        <a href="/admin"><i class="fa -o fa-cog"></i> <span class="nav-label">Settings</span> </a>
-      </li>
+      {{#if canViewJob}}
+        <li class="{{isActiveRoute regex='jobItemsMaster'}}">
+          <a href="/jobItems"><i class="fa fa-spoon"></i> <span class="nav-label">Jobs</span> </a>
+        </li>
+      {{/if}}
+
+      {{#if canViewStock}}
+        <li class="{{isActiveRoute name='ingredientsList|stocktake|supplierOrdering'}}">
+          <a href="#">
+            <i class="fa fa-list"></i>
+            <span class="nav-label">Stock</span>
+          </a>
+          <ul class="nav nav-second-level {{isActiveRoute name='ingredientsList|stocktake|supplierOrdering' className='in'}}">
+            <li class="{{isActiveRoute name='ingredientsList'}}">
+              <a href="/stocklist">List</a>
+            </li>
+
+            {{#if canEditStock}}
+              <li class="{{isActiveRoute name='stocktake'}}">
+                <a href="/stocktake">Stocktake</a>
+              </li>
+              <li class="{{isActiveRoute name='supplierOrdering'}}">
+                <a href="/stocktake/order/receipts">Receive Orders</a>
+              </li>
+              <li class="{{isActiveRoute name='suppliersList'}}">
+                <a href="/suppliers">Suppliers</a>
+              </li>
+            {{/if}}
+          </ul>
+        </li>
+      {{/if}}
+
+      {{#if canViewForecast}}
+        <li class="{{isActiveRoute regex='salesCalibration|actualSales|cafeSalesForecast|weeklySalesForecastMenusList'}}">
+          <a href="#">
+            <i class="glyphicon glyphicon-usd"></i>
+            <span class="nav-label">Sales</span>
+          </a>
+          <ul
+            class="nav nav-second-level {{isActiveRoute regex='salesCalibration|actualSales|cafeSalesForecast|weeklySalesForecastMenusList' className='in'}}">
+            <li class="{{isActiveRoute regex='salesCalibration'}}">
+              <a href="/sales/calibration/all/all">Calibration</a>
+            </li>
+            <li class="{{isActiveRoute regex='actualSales'}}">
+              <a href="/sales/{{today}}">Actual Sales</a>
+            </li>
+            <li class="{{isActiveRoute regex='cafeSalesForecast'}}">
+              <a href="#">
+                <span class="nav-label">Forecasting</span>
+              </a>
+              <ul
+                class="nav nav-third-level {{isActiveRoute regex='cafeSalesForecast|weeklySalesForecastMenusList' className='in'}}">
+                <li class="{{isActiveRoute regex='cafeSalesForecast|weeklySalesForecastMenusList'}}">
+                  <a href="/sales/forecast/cafe/{{year}}/{{week}}">Cafe</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+
+        <li class="{{isActiveRoute name='teamHours|currentStocks'}}">
+          <a href="#">
+            <i class="fa fa-line-chart"></i>
+            <span class="nav-label">Reports</span>
+          </a>
+          <ul class="nav nav-second-level {{isActiveRoute name='teamHours|currentStocks' className='in'}}">
+            <li class="{{isActiveRoute name='teamHours'}}">
+              <a href="/reports/{{year}}/{{week}}#shifts">Team Hours</a>
+            </li>
+            <li class="{{isActiveRoute name='currentStocks'}}">
+              <a href="/reports/stocktake/currentStocks/{{year}}/{{week}}">Daily stock</a>
+            </li>
+          </ul>
+        </li>
+      {{/if}}
+
+      {{#if isOrganizationOwner}}
+        <li class="{{isActiveRoute regex='admin'}}">
+          <a href="/admin"><i class="fa -o fa-cog"></i> <span class="nav-label">Settings</span> </a>
+        </li>
+      {{/if}}
     {{/if}}
   {{/if}}
 </ul>
