--- a/client/lib/components/roster/weekly/bottom/day/view.html
+++ b/client/lib/components/roster/weekly/bottom/day/view.html
@@ -6,7 +6,7 @@
           <h3>{{state$name.day}}</h3>
           <h5>{{state$name.date}}</h5>
         {{/if}}
-        {{#if state$isUserPermitted}}
+        {{#if canEditRoster}}
         <div class="input-group">
           <span class="input-group-btn">
             <button type="button" class="btn btn-sm btn-white btn-block addShiftBox" data-day="{{#if state$isTemplate}}{{state$name}}{{else}}{{state$name.date}}{{/if}}">
