--- a/client/lib/components/roster/weekly/bottom/shift_basic/view.html
+++ b/client/lib/components/roster/weekly/bottom/shift_basic/view.html
@@ -1,14 +1,14 @@
 <template name="shiftBasic">
   <div class="hidden-success-box">
     <li class="success-element" data-id="{{state$shift._id}}" data-origin="{{state$thisorigin}}">
-      {{#if state$isUserPermitted}}
+      {{#if canEditRoster}}
       <div class="box-wrapper pull-right" style="display: none;">
         <span class="box-remove glyphicon glyphicon-remove removeRosterBox"></span>
       </div>
       {{/if}}
       <div class="agile-detail">
         <i class="fa fa-user"></i>
-        {{#if state$isUserPermitted}}
+        {{#if canEditRoster}}
           <a href="#" class="select-worker" data-pk="{{state$assignedTo._id}}" data-value="{{state$assignedTo._id}}">{{state$assignedTo.username}}</a>
         {{else}}
           {{#if state$assignedTo.username}}
@@ -20,7 +20,7 @@
       </div>
       <div class="agile-detail">
         <i class="fa fa-clock-o"></i>
-        {{#if state$isUserPermitted}}
+        {{#if canEditRoster}}
           <a href="#" class="shiftStartTime" data-pk="1">{{timeFormat state$shift.startTime}}</a> - <a href="#" class="shiftEndTime" data-pk="1">{{timeFormat state$shift.endTime}}</a>
         {{else}}
           {{timeFormat state$shift.startTime}} - {{timeFormat state$shift.endTime}}
@@ -28,7 +28,7 @@
       </div>
       <div class="agile-detail">
         <i class="fa fa-angle-double-right"></i>
-        {{#if state$isUserPermitted}}
+        {{#if canEditRoster}}
           <a href="#" class="section" data-pk="{{state$section._id}}" data-value="{{state$section._id}}">{{state$section.name}}</a>
         {{else}}
           {{state$section.name}}
