--- a/client/lib/components/roster/weekly/week/view.html
+++ b/client/lib/components/roster/weekly/week/view.html
@@ -1,5 +1,9 @@
 <template name="weeklyShiftRoster">
-  {{> render component="weeklyFigures" week=state$week}}
+
+  {{#if canViewForecast}}
+    {{> render component="weeklyFigures" week=state$week}}
+  {{/if}}
+
   <div class="row">
     <div class="col-lg-12">
       {{#each state$week}}
