--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -42,7 +42,7 @@
             <i class="fa fa-long-arrow-left"></i> Active Items
           {{/linkTo}}
         {{else}}
-          {{#if state$isManagerOrAdmin}}
+          {{#if canEditMenu}}
           <div class="btn-group">
             <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-cog"></i>
@@ -89,7 +89,7 @@
                   <a href="" class="hidden-print subscribeMenuItemBtn" data-id="{{state$id}}"><i class="fa fa-lg fa-rss"></i> Subscribe</a>
                 </li>
               {{/if}}
-              {{#if state$isManagerOrAdmin}}
+              {{#if canEditMenu}}
                 <li>
                   <a href="" class="hidden-print copyMenuItemBtn" data-id="{{state$id}}">
                     <i class="fa fa-copy" data-id="{{state$id}}"></i>
@@ -103,7 +103,7 @@
                   Print
                 </a>
               </li>
-              {{#if state$isManagerOrAdmin}}
+              {{#if canEditMenu}}
                 <li role="separator" class="divider"></li>
                 {{#if state$isArchiveMenu}}
                 <li>
@@ -148,7 +148,7 @@
                 <a href="" class="hidden-print subscribeJobItemBtn" data-id="{{state$id}}"><i class="fa fa-lg fa-rss text-muted" data-id="{{state$id}}"></i> Subscribe</a>
                 {{/if}}
               </li>
-              {{#if state$isManagerOrAdmin}}
+              {{#if canEditJob}}
               <li>
                 <a href="" class="hidden-print editJobItemBtn" data-id="{{state$id}}">
                   <i class="fa fa-edit" data-id="{{state$id}}"></i>Edit
@@ -165,7 +165,7 @@
                   <i class="fa fa-print"></i> Print
                 </a>
               </li>
-              {{#if state$isManagerOrAdmin}}
+              {{#if canEditJob}}
               <li role="separator" class="divider"></li>
                 {{#if state$isArchiveJob}}
                 <li>
@@ -234,7 +234,7 @@
             <i class="fa fa-long-arrow-left"></i> Active Items
           </a>
         {{else}}
-          {{#if state$isManagerOrAdmin}}
+          {{#if canEditStock}}
           <div class="btn-group">
             <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-cog"></i>
@@ -265,19 +265,21 @@
 
       {{#if state$weeklyNavigation}}
         <div class="title-action" data-type="{{state$type}}">
-          {{#if state$isWeeklyRosterCreated}}
-            <button class="btn btn-link showHideButton" type="button" data-target="#collapse" data-toggle="collapse">
-              {{#if state$collapseIn}} 
-                Hide
-              {{else}} 
-                Show
-              {{/if}} 
-              Figures
-            </button>
-            {{#if state$isWeeklyRosterPublished}}
-              <button class="btn btn-primary" disabled="disabled">Published Roster on {{dayFormat state$publishedOn}}</button>
-            {{else}}
-              <button class="btn btn-primary" id="publishRoster">Publish Roster</button>
+          {{#if canEditRoster}}
+            {{#if state$isWeeklyRosterCreated}}
+              <button class="btn btn-link showHideButton" type="button" data-target="#collapse" data-toggle="collapse">
+                {{#if state$collapseIn}}
+                  Hide
+                {{else}}
+                  Show
+                {{/if}}
+                Figures
+              </button>
+              {{#if state$isWeeklyRosterPublished}}
+                <button class="btn btn-primary" disabled="disabled">Published Roster on {{dayFormat state$publishedOn}}</button>
+              {{else}}
+                <button class="btn btn-primary" id="publishRoster">Publish Roster</button>
+              {{/if}}
             {{/if}}
           {{/if}}
 
