--- a/client/lib/components/menuitems/detail/view.html
+++ b/client/lib/components/menuitems/detail/view.html
@@ -30,8 +30,8 @@
                 {{> render component="textEditor" id='menuItemEditorDetail'
               initialHtml=state$initialHTML}}
               </div>
-              {{#if state$isPermitted}}
-              <div class="panel-footer textEdit">Click here to edit</div>
+              {{#if canEditMenu}}
+                <div class="panel-footer textEdit">Click here to edit</div>
               {{/if}}
             </div>
           </div>
@@ -42,15 +42,15 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              {{#if state$isPermitted}}
-              <th></th>
+              {{#if canEditMenu}}
+                <th></th>
               {{/if}}
               <th>Name</th>
               <th>Type</th>
               <th>Quantity</th>
               <th>Measure</th>
-              {{#if state$isPermitted}}
-              <th></th>
+              {{#if canEditMenu}}
+                <th></th>
               {{/if}}
             </tr>
           </thead>
@@ -63,8 +63,8 @@
             {{/each}}
           </tbody>
         </table>
-        {{#if state$isPermitted}}
-        <a class="btn btn-primary" href="#showListOfIngs" data-toggle="modal">Add prep or stock</a>
+        {{#if canEditMenu}}
+          <a class="btn btn-primary" href="#showListOfIngs" data-toggle="modal">Add prep or stock</a>
         {{/if}}
       </div>
       {{> render component='menuDetailWidgets' item=state$menu}}
