--- a/client/lib/components/menuitems/edit/view.html
+++ b/client/lib/components/menuitems/edit/view.html
@@ -1,64 +1,80 @@
 <template name="editMenuItem">
-  <form method="get" class="form-horizontal"> 
+  <form method="get" class="form-horizontal">
     <div class="form-group">
       <label class="col-sm-2 control-label">Category</label>
+
       <div class="col-sm-10">
-        <a href="#" data-name="category" class="my-editable-link">{{state$myCategory.name}}</a>
-        <select name="category" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
+        {{#if canEditMenu}}
+          <a href="#" data-name="category" class="my-editable-link">{{state$myCategory.name}}</a>
+        {{else}}
+          <span style="position: relative; top: 8px;">{{state$myCategory.name}}</span>
+        {{/if}}
+        <select name="category" class="form-control text-capitalize hide my-editable-select"
+                data-id="{{state$menu._id}}">
           {{#each state$categoriesList}}
             {{# if equal _id state$myCategory._id}}
               <option value="{{state$myCategory._id}}" selected='selected'>{{state$myCategory.name}}</option>
             {{else}}
               <option value="{{_id}}">{{name}}</option>
             {{/ if}}
-          {{/each}}        
+          {{/each}}
         </select>
       </div>
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
+
       <div class="col-sm-10">
         {{#if state$isArchived}}
-            <span style="position: relative; top: 8px;">
-                archived
-            </span>
+          <span style="position: relative; top: 8px;">
+            archived
+          </span>
         {{else}}
+          {{#if canEditMenu}}
             <a href="#" data-name="status" class="my-editable-link">{{state$menu.status}}</a>
-            <select name="status" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
-                {{#each state$statusList}}
-                    {{# if equal this.name state$menu.status}}
-                        <option value="{{state$menu.status}}" selected="selected" >{{state$menu.status}}</option>
-                    {{else}}
-                        <option value="{{this.name}}">{{this.name}}</option>
-                    {{/ if}}
-                {{/each}}
-            </select>
+          {{else}}
+            <span style="position: relative; top: 8px;">{{state$menu.status}}</span>
+          {{/if}}
+          <select name="status" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
+            {{#each state$statusList}}
+              {{# if equal this.name state$menu.status}}
+                <option value="{{state$menu.status}}" selected="selected">{{state$menu.status}}</option>
+              {{else}}
+                <option value="{{this.name}}">{{this.name}}</option>
+              {{/ if}}
+            {{/each}}
+          </select>
         {{/if}}
       </div>
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label">Image</label>
+
       <div class="col-sm-10">
-        <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button><br>
+        <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button>
+        <br>
+
         <div>
           {{#if state$menu.image}}
-          <div class="file col-sm-2 uploadedImageDiv">
-            <a href="#">
-              <span class="corner"></span>
-              <div class="image">
-                <img id="uploadedImageUrl" src="{{state$menu.image}}" class="img-responsive menu-item-image">
-              </div>
-            </a>
-          </div>
+            <div class="file col-sm-2 uploadedImageDiv">
+              <a href="#">
+                <span class="corner"></span>
+
+                <div class="image">
+                  <img id="uploadedImageUrl" src="{{state$menu.image}}" class="img-responsive menu-item-image">
+                </div>
+              </a>
+            </div>
           {{else}}
             <div class="file col-sm-2 uploadedNewImageDiv hide">
-            <a href="#">
-              <span class="corner"></span>
-              <div class="image">
-                <img id="uploadedImageUrl" src="" class="img-responsive menu-item-image">
-              </div>
-            </a>
-          </div>
+              <a href="#">
+                <span class="corner"></span>
+
+                <div class="image">
+                  <img id="uploadedImageUrl" src="" class="img-responsive menu-item-image">
+                </div>
+              </a>
+            </div>
           {{/if}}
         </div>
       </div>
