Home counts changes

--- a/client/lib/components/home_count_tags/view.html
+++ b/client/lib/components/home_count_tags/view.html
@@ -8,7 +8,7 @@
           </div>
           <div class="col-xs-8 text-right">
             <span> Menu Items </span>
-            <h2 class="font-bold">{{state$menuItemsCount}}</h2>
+            <h2 class="font-bold">{{state$menusCount}}</h2>
           </div>
         </div>
       </div>
@@ -21,7 +21,7 @@
           </div>
           <div class="col-xs-8 text-right">
             <span> Jobs </span>
-            <h2 class="font-bold">{{state$jobItemsCount}}</h2>
+            <h2 class="font-bold">{{state$jobsCount}}</h2>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
           </div>
           <div class="col-xs-8 text-right">
             <span> Ingredients </span>
-            <h2 class="font-bold">{{state$ingredientCount}}</h2>
+            <h2 class="font-bold">{{state$ingCount}}</h2>
           </div>
         </div>
       </div>
