--- a/client/lib/components/menuitems/edit/view.html
+++ b/client/lib/components/menuitems/edit/view.html
@@ -48,15 +48,28 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label">Image</label>
+      {{#if canEditMenu}}
+        <label class="col-sm-2 control-label">Image</label>
+      {{else}}
+        {{#if state$menu.image}}
+          <label class="col-sm-2 control-label">Image</label>
+        {{/if}}
+      {{/if}}
 
       <div class="col-sm-10">
-        <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem">Upload Image</button>
-        <br>
+        {{# if canEditMenu}}
+          <button type="button" class="btn btn-sm btn-info" id="uploadMenuItem" data-id="{{state$}}">Upload Image</button>
+          <br>
+        {{/if}}
 
         <div>
           {{#if state$menu.image}}
             <div class="file col-sm-2 uploadedImageDiv">
+
+              {{#if canEditMenu}}
+                <i class="fa fa-remove remove-image" title="Remove image"></i>
+              {{/if}}
+
               <a href="#">
                 <span class="corner"></span>
 
