--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -412,3 +412,11 @@ span {
 .open-flyout {
   cursor: pointer;
 }
+
+.remove-image {
+  position: absolute;
+  color: #fff;
+  background-color: rgba(0,0,0,0.5);
+  padding: 5px 6px;
+  cursor: pointer;
+}
