--- a/client/lib/components/stock/items/edit/view.html
+++ b/client/lib/components/stock/items/edit/view.html
@@ -4,11 +4,11 @@
     <td>{{state$item.description}}</td>
     <td>{{state$item.portionUsed}}</td>
     <td>$ {{state$unitPrice}}</td>
-    <td><input name="ing_qty" data-id="{{state$item._id}}" value="{{state$quantity}}" type="text"/></td>
+    <td><input name="ing_qty" data-id="{{state$item._id}}" value="{{state$quantity}}" class="ing-qty" type="text"/></td>
     <td>
-      <button type="button" class="btn btn-outline btn-xs btn-danger removeIng" data-id="{{state$item._id}}">
-        <i class="fa fa-times"></i>
-      </button>
+      <a href="">
+        <i class="fa fa-trash removeIng" data-id="{{state$item._id}}"></i>
+      </a>
     </td>
   </tr>
 </template>
