--- a/client/lib/components/stocktake/ordering/supplier_filter/view.html
+++ b/client/lib/components/stocktake/ordering/supplier_filter/view.html
@@ -1,6 +1,6 @@
 <template name="supplierFilter">
   {{#each state$suppliers}}
-    <a class="btn {{#if state$receiptExists this}} btn-primary {{else}} btn-default {{/if}} activateSupplier" data-id="{{this}}">{{SupplierName this}}
+    <a class="btn {{#if state$receiptExists this}} btn-primary {{else}} btn-default {{/if}} activateSupplier" data-id="{{this}}">{{supplierName this}}
     </a>
   {{/each}}
   <hr>
