--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -28,7 +28,7 @@
   <!-- End wrapper-->
 
   <!-- EDIT INGREDIENT-->
-  {{#if canEditStock}}
+  {{#if canViewStock}}
   <div class="modal fade" id="editIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     {{> render component = 'editIngredientItem'}}
   </div>
