fix prep not adding bug

--- a/client/lib/components/jobItems/modal_list/item/view.html
+++ b/client/lib/components/jobItems/modal_list/item/view.html
@@ -6,7 +6,7 @@
     <td>{{secondsToMinutes state$item.activeTime}}</td>
     <td>$ {{state$costPerPortion}}</td>
     <td>
-      <div class="i-checks">
+      <div class="i-checks selected-Prep">
         <label>
           <input type="checkbox" value="" data-id="{{state$item._id}}" data-type="{{state$item.type}}" class="selectedPrep">
         </label>
