--- a/client/lib/components/jobItems/items/edit/view.html
+++ b/client/lib/components/jobItems/items/edit/view.html
@@ -2,7 +2,7 @@
   <tr>
     <td>{{state$item.name}}</td>
     <td>$ {{state$item.prepCostPerPortion}}</td>
-    <td><input type="text" name="prep_qty" class="prepQty" data-id="{{state$item._id}}" value="{{state$quantity}}"/></td>
+    <td><input type="text" name="prep_qty" class="prep-qty" data-id="{{state$item._id}}" value="{{state$quantity}}"/></td>
     <td>
       <button type="button" class="btn btn-outline btn-xs btn-danger removePrep" data-id="{{state$item._id}}">
         <i class="fa fa-times"></i>
