--- a/client/lib/components/stock/modal_list/stock_item/view.html
+++ b/client/lib/components/stock/modal_list/stock_item/view.html
@@ -6,7 +6,7 @@
     <td>{{state$item.portionUsed}}</td>
     <td>$ {{state$costPerPortionUsed}}</td>
     <td>
-      <div class="i-checks">
+      <div class="i-checks selected-Ing">
         <label>
           <input type="checkbox" value="" data-id="{{state$item._id}}" data-type="{{state$item.type}}" class="selectedIng" name="selectedIng">
         </label>
