fixed menu items add bug

--- a/client/lib/components/jobItems/items/edit/view.html
+++ b/client/lib/components/jobItems/items/edit/view.html
@@ -4,9 +4,9 @@
     <td>$ {{state$item.prepCostPerPortion}}</td>
     <td><input type="text" name="prep_qty" class="prep-qty" data-id="{{state$item._id}}" value="{{state$quantity}}"/></td>
     <td>
-      <button type="button" class="btn btn-outline btn-xs btn-danger removePrep" data-id="{{state$item._id}}">
-        <i class="fa fa-times"></i>
-      </button>
+      <a href="">
+        <i class="fa fa-trash removePrep" data-id="{{state$item._id}}"></i>
+      </a>
     </td>
   </tr>
 </template>
