--- a/client/lib/components/jobItems/modal_list/item/view.html
+++ b/client/lib/components/jobItems/modal_list/item/view.html
@@ -4,7 +4,7 @@
       <a href="" target="_blank" data-toggle="modal">{{{state$item.name}}}</a>
     </td>
     <td>{{secondsToMinutes state$item.activeTime}}</td>
-    <td>$ {{state$costPerPortion}}</td>
+    <!-- <td>$ {{state$costPerPortion}}</td> -->
     <td>
       <div class="i-checks selected-Prep">
         <label>
