--- a/client/lib/components/jobItems/modal_list/list/view.html
+++ b/client/lib/components/jobItems/modal_list/list/view.html
@@ -14,7 +14,7 @@
                 <tr>
                   <th>Name</th>
                   <th>Active Time (mins)</th>
-                  <th>Cost per Portion ($)</th>
+                  <!-- <th>Cost per Portion ($)</th> -->
                   <th>Action</th>
                 </tr>
               </thead>
