fixed submit ing

--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -112,4 +112,10 @@
   </div>
   {{/if}}
   <!-- /ADD NEW SUPPLIER-->
+
+   <!-- ADD INGREDIENT-->
+  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'submitIngredient'}}
+  </div>
+  <!-- /ADD INGREDIENT -->
 </template>
