fixed submit ing

--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -93,4 +93,10 @@
     {{> render component = 'newSupplier'}}
   </div>
   <!-- /ADD NEW SUPPLIER-->
+
+   <!-- ADD INGREDIENT-->
+  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'submitIngredient'}}
+  </div>
+  <!-- /ADD INGREDIENT -->
 </template>
