--- a/client/lib/components/menuitems/prep_or_stock/item/view.html
+++ b/client/lib/components/menuitems/prep_or_stock/item/view.html
@@ -10,7 +10,7 @@
       <td>{{state$type}}</td>
       <td>
         {{#if state$isPermitted}}
-          <a href="#" class="quantity" data-type="text" data-pk="{{state$item._id}}" data-url="/post" data-title="Enter quantity" data-itemtype="{{state$type}}">{{state$quantity}}</a>
+          {{> render component="quantity" id=state$item._id type=state$type quantity=state$quantity}}  
         {{else}}
           {{state$quantity}}
         {{/if}}
